# ai_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
00_data/안전_가이드/: 안전보건 실무길잡이_선박건조 및 수리업.pkl
00_data/안전_법령/: 산업안전보건기준에 관한 규칙(고용노동부령)(제00417호)(20250629).pkl  산업안전보건법 시행규칙(고용노동부령)(제00419호)(20260626).pkl  산업안전보건법 시행규칙(고용노동부령)(제00440호)(20250429).pkl  산업안전보건법 시행령(대통령령)(제34603호)(20260626).pkl  산업안전보건법 시행령(대통령령)(제35483호)(20250429).pkl  산업안전보건법(법률)(제19591호)(20240517).pkl  중대재해 처벌 등에 관한 법률 시행령(대통령령)(제33023호)(20221208).pkl  중대재해 처벌 등에 관한 법률(법률)(제17907호)(20220127).pkl
00_data/안전_사고사례/: 사고사례_0.pkl  사고사례_1.pkl  사고사례_10.pkl  사고사례_11.pkl  사고사례_12.pkl  사고사례_13.pkl  사고사례_14.pkl  사고사례_15.pkl  사고사례_16.pkl  사고사례_17.pkl  사고사례_18.pkl  사고사례_19.pkl  사고사례_2.pkl  사고사례_20.pkl  사고사례_21.pkl  사고사례_22.pkl  사고사례_23.pkl  사고사례_24.pkl  사고사례_25.pkl  사고사례_26.pkl  사고사례_3.pkl  사고사례_4.pkl  사고사례_5.pkl  사고사례_6.pkl  사고사례_7.pkl  사고사례_8.pkl  사고사례_9.pkl
00_data/안전_판례/: 대법원 2011. 11. 24. 선고 2011두11013 판결.pkl  대법원 2020. 8. 27. 선고 2016다248998 전원합의체 판결.pkl  대법원 2021. 9. 30. 선고 2020도3996 판결-1.pkl  대법원 2021. 9. 30. 선고 2020도3996 판결.pkl  대법원 2022. 1. 13. 선고 2015도6326 판결.pkl  대법원 2023. 12. 28. 선고 2023도12316 판결.pkl  (+1 more)
01_parsing/: 01_test_docling.ipynb  02_change_filename.ipynb  parser.py
02_embeding/: test_embedding.ipynb
03_elasticsearch/: test_elastic_search.ipynb
04_retrieve/: hybrid_search.ipynb
05_deep_agent/: 01_play_with_state.ipynb  02_todos.ipynb
05_langgraph_note/: 01_state.ipynb  02_tool_calling.ipynb
09_deep_agent/: 01_create_agent.ipynb  03_files.ipynb
(+2 files in other folders)
