[project]
name = "ai-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.31.0",
    "jupyterlab>=4.4.1",
    "langchain>=0.3.24",
    "langchain-docling>=0.2.0",
    "langchain-elasticsearch>=0.3.2",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.6.7",
    "pdfplumber>=0.11.6",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
